--- a/application/views/scripts/manzua/editar.phtml
+++ b/application/views/scripts/manzua/editar.phtml
@@ -176,7 +176,7 @@
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
             <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                 <div id="base">
-                    <input class="responsivo" onclick="jsInsertPesqueiroWithTimeAndRange(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['man_id'] ?>')" type="button" value="Adicionar" />
+                    <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['man_id'] ?>', 'distancia')" type="button" value="Adicionar" />
                     <select class="responsivo" style="float:left;" name="nomePesqueiro">
                         <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
                             <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
@@ -189,34 +189,14 @@
 
             </fieldset>
             <br>
-            <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
-                <table id="pesqueiros">
-                    <tr>
-                        <th width="5%">Id Entrevista</th>
-                        <th width="50%">Pesqueiro</th>
-                        <th width="30%">Tempo até o Pesqueiro</th>
-                        <th width="30%">Distância até o Pesqueiro</th>
-                    </tr>
-                    <?php
-                    foreach ($this->vManzua as $key => $vManzua):
-                        ?>
-                        <tr id="itemManzuaRows">
-                            <td name="inputIdEntrevista"> <?= $vManzua['man_id'] ?> </td>
-                            <td name="inputPesqueiro" > <?= $vManzua['paf_pesqueiro'] ?> </td>
-                            <td name="inputTempoaPesqueiro"> <?= $vManzua['t_tempoapesqueiro'] ?> </td>
-                            <td name="inputTempoaPesqueiro"> <?= $vManzua['t_distapesqueiro'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['man_id'] ?>, '<?= $this->url(array("controller" => "manzua", "action" => "deletepesqueiro"), null, true) ?>', <?= $vManzua['man_paf_id'] ?>)"></td>
-                        </tr>
-                    <?php endforeach; ?>
-                </table>
-            </fieldset>
+            <?php include('tablepesqueiro.phtml'); ?>
         </fieldset>
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div >
-                <input class="responsivo" onclick="jsInsertEspecieCapturadaTipoVenda(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['man_id']?>')" type="button" value="Adicionar" />
-                <select class="responsivo-esp"  name="SelectEspecie" class="espc">
+                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['man_id']?>','venda')" type="button" value="Adicionar" />
+                <select class="responsivo-esp"  name="selectEspecie" class="espc">
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
                     <?php endforeach; ?>
@@ -235,31 +215,7 @@
 
         </fieldset>
         <br>
-         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Espécies Capturadas:</legend>
-                <table id="especiesCapturadas">
-                    <tr>
-                        <th width="20%">Id Entrevista</th>
-                        <th width="30%">Espécie Capturada</th>
-                        <th width="20%">Quantidade</th>
-                        <th width="20%">Peso (kg)</th>
-                        <th width="20%">Preço por kg</th>
-                        <th width="10%">Venda</th>
-                    </tr>
-                    <?php
-                    foreach ($this->vEspecieCapturadas as $key => $vEspecieCapturada):
-                        ?>
-                        <tr id="itemEmbarcacoesRows">
-                            <td name="inputEntrevista"> <?= $vEspecieCapturada['man_id'] ?> </td>
-                            <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
-                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
-                            <td name="inputPreco"> <?= 'R$'.$vEspecieCapturada['spc_preco'] ?> </td>
-                            <td name="inputTVenda"> <?= $vEspecieCapturada['ttv_tipovenda']?></td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['man_id'] ?>, '<?= $this->url(array("controller" => "manzua", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_man_id'] ?>)"></td>
-                        </tr>
-                    <?php endforeach; ?>
-                </table>
-            </fieldset>
+        <?php include('tableespcaptura.phtml'); ?>
     </fieldset>
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
