--- a/application/views/scripts/tarrafa/editar.phtml
+++ b/application/views/scripts/tarrafa/editar.phtml
@@ -152,7 +152,7 @@
 <fieldset class="noEditable"><legend>Pesqueiro:</legend>
     <fieldset class="noEditable"><legend>Pesqueiro e tempo no pesqueiro:</legend>
             <div id="base">
-                <input class="responsivo" onclick="jsInsertPesqueiroWithoutTime(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['tar_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['tar_id']?>','')" type="button" value="Adicionar" />
                 <select class="responsivo" style="float:left;" name="nomePesqueiro">
                     <option value="" selected></option>
                     <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
@@ -160,33 +160,16 @@
                     <?php endforeach; ?>
                 </select>
             </div>
-
         </fieldset>
         <br>
-        <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
-            <table id="pesqueiros">
-                <tr>
-                    <th width="5%">Id Entrevista</th>
-                    <th width="50%">Pesqueiro</th>
-                </tr>
-                <?php
-                foreach ($this->vTarrafa as $key => $vTarrafa):
-                    ?>
-                    <tr id="itemTarrafaRows">
-                        <td name="inputIdEntrevista"> <?= $vTarrafa['tar_id'] ?> </td>
-                        <td name="inputPesqueiro"> <?= $vTarrafa['paf_pesqueiro'] ?> </td>
-                        <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['tar_id'] ?>, '<?= $this->url(array("controller" => "tarrafa", "action" => "deletepesqueiro"), null, true) ?>', <?= $vTarrafa['tar_paf_id'] ?>)"></td>
-                    </tr>
-                <?php endforeach; ?>
-            </table>
-        </fieldset>
+        <?php include('tablepesqueiro.phtml'); ?>
 </fieldset>
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input class="responsivo" onclick="jsInsertEspecieCapturada(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['tar_id']?>')" type="button" value="Adicionar" />
-                <select style="float:left;" name="SelectEspecie" class="espc">
+                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "tarrafa", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['tar_id']?>','')" type="button" value="Adicionar" />
+                <select style="float:left;" name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
@@ -202,29 +185,7 @@
 
         </fieldset>
         <br>
-         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Espécies Capturadas:</legend>
-                <table id="especiesCapturadas">
-                    <tr>
-                        <th width="20%">Id Entrevista</th>
-                        <th width="30%">Espécie Capturada</th>
-                        <th width="20%">Quantidade</th>
-                        <th width="20%">Peso (kg)</th>
-                        <th width="20%">Preço por kg</th>
-                    </tr>
-                    <?php
-                    foreach ($this->vEspecieCapturadas as $key => $vEspecieCapturada):
-                        ?>
-                        <tr id="itemEmbarcacoesRows">
-                            <td name="inputEntrevista"> <?= $vEspecieCapturada['tar_id'] ?> </td>
-                            <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
-                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
-                            <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['tar_id'] ?>, '<?= $this->url(array("controller" => "tarrafa", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_tar_id'] ?>)"></td>
-                        </tr>
-                    <?php endforeach; ?>
-                </table>
-            </fieldset>
+        <?php include('tableespcaptura.phtml'); ?>
     </fieldset>
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
