--- a/application/views/scripts/vara-pesca/editar.phtml
+++ b/application/views/scripts/vara-pesca/editar.phtml
@@ -210,7 +210,7 @@
     <fieldset class="noEditable"><legend>Pesqueiro:</legend>
                 <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                     <div id="base">
-                        <input onclick="jsInsertPesqueiroWithTimeAndRange(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['vp_id'] ?>')" type="button" value="Adicionar" />
+                        <input onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['vp_id'] ?>','distancia')" type="button" value="Adicionar" />
                         <select style="float:left;" name="nomePesqueiro" class="responsivo">
                             <option value="" selected></option>
                             <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
@@ -224,34 +224,14 @@
 
                 </fieldset>
                 <br>
-                <fieldset class="noEditable" id="itemArteTipoRows"><legend>Pesqueiros:</legend>
-                    <table id="pesqueiros">
-                        <tr>
-                            <th width="5%">Id Entrevista</th>
-                            <th width="50%">Pesqueiro</th>
-                            <th width="30%">Tempo até o Pesqueiro</th>
-                            <th width="30%">Distância até o Pesqueiro</th>
-                        </tr>
-                        <?php
-                        foreach ($this->vVaraPesca as $key => $vVarapesca):
-                            ?>
-                            <tr id="itemVaraPescaRows">
-                                <td name="inputIdEntrevista"> <?= $vVarapesca['vp_id'] ?> </td>
-                                <td name="inputPesqueiro" > <?= $vVarapesca['paf_pesqueiro'] ?> </td>
-                                <td name="inputTempoaPesqueiro"> <?= $vVarapesca['t_tempoapesqueiro'] ?> </td>
-                                <td name="inputTempoaPesqueiro"> <?= $vVarapesca['t_distapesqueiro'] ?> </td>
-                                <td><input type="button" class="button-del" width="5%" onclick="jsDeletePesqueiro(<?= $this->entrevista['vp_id'] ?>, '<?= $this->url(array("controller" => "vara-pesca", "action" => "deletepesqueiro"), null, true) ?>', <?= $vVarapesca['vp_paf_id'] ?>)"></td>
-                            </tr>
-                        <?php endforeach; ?>
-                    </table>
-                </fieldset>
+                <?php include('tablepesqueiro.phtml'); ?>
             </fieldset>
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
             <div id="base">
-                <input class="responsivo" onclick="jsInsertEspecieCapturadaTipoVenda(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['vp_id']?>')" type="button" value="Adicionar" />
-                <select style="float:left;" name="SelectEspecie" class="responsivo" >
+                <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['vp_id']?>','venda')" type="button" value="Adicionar" />
+                <select style="float:left;" name="selectEspecie" class="responsivo" >
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
@@ -272,30 +252,7 @@
 
         </fieldset>
         <br>
-         <fieldset class="noEditable" id="itemArteTipoRows"><legend>Espécies Capturadas:</legend>
-                <table id="especiesCapturadas">
-                    <tr>
-                        <th width="20%">Id Entrevista</th>
-                        <th width="30%">Espécie Capturada</th>
-                        <th width="20%">Quantidade</th>
-                        <th width="20%">Peso (kg)</th>
-                        <th width="20%">Preço por kg</th>
-                    </tr>
-                    <?php
-                    foreach ($this->vEspecieCapturadas as $key => $vEspecieCapturada):
-                        ?>
-                        <tr id="itemEmbarcacoesRows">
-                            <td name="inputEntrevista"> <?= $vEspecieCapturada['vp_id'] ?> </td>
-                            <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
-                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
-                            <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
-                            <td><input type="button" class="button-del" width="5%" 
-                            onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['vp_id'] ?>, '<?= $this->url(array("controller" => "vara-pesca", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_vp_id'] ?>)"></td>
-                        </tr>
-                    <?php endforeach; ?>
-                </table>
-            </fieldset>
+        <?php include('tableespcaptura.phtml'); ?>
     </fieldset>
     <fieldset class="noEditable"><legend>Avistamento:</legend>
         <fieldset class="noEditable"><legend>O Que foi avistado:</legend>
